--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
   "dependencies": {
     "babel-polyfill": "^6.16.0",
     "body-parser": "^1.15.2",
+    "express-session": "^1.14.1",
+    "passport": "^0.3.2",
+    "passport-github2": "^0.1.10",
     "pg": "^6.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
